# blib

./: .gitignore  LICENSE.txt  README.md  abbrev.py  ltwa.py  main.py  pyproject.toml
blib/: main.py  utils.py
blib/encoding/: encoder.py  encoder_t.py  encoder_test.py  latex.py  latex_encoder.py  latex_encoder_test.py  latex_t.py  rich_text_encoder.py  rich_text_encoder_test.py  richtext.py  richtext_t.py  tokenizer.py  unicode.py  unicode_encoder.py  unicode_t.py  unicode_test.py
blib/formatting/: abbreviator.py  bibtex.py  data_formatter.py  markdown.py  richtext.py  richtext_review.py  text_formatter.py
blib/formatting/tests/: abbreviator_test.py
blib/ltwa/: __init__.py
blib/providers/: arxiv_provider.py  arxiv_provider_test.py  crossref_provider.py  crossref_provider_test.py
blib/sources/: arxiv.py  crossref.py  crossref_t.py
encoding/: encoder.py  latex.py  tokenizer.py
formatting/: bibtex.py  formatter.py  text_formatter.py
ltwa/: ltwa_to_dict.py
sources/: arxiv.py  arxiv_t.py  crossref.py
src/blib/: citekey.py  exception.py  main.py  main_test.py  resourceid.py  utils.py  utils_test.py
src/blib/encoding/: __init__.py  encoder.py  encoder_test.py  latex_encoder.py  latex_encoder_test.py  rich_text_encoder.py  unicode_encoder.py  unicode_mathml_test.py
src/blib/formatting/: bibdesk_autogeneration.py  bibtex.py  data_formatter.py  doi_formatter.py  markdown.py  richtext.py  richtext_review.py  text_formatter.py
src/blib/providers/: __init__.py  arxiv_provider.py  crossref_provider.py  (+5 more)
tex/: bibtex.py  encoding.py  encoding_t.py  mml2tex.py
(+4 files in other folders)
