[build-system]
requires = ["setuptools >= 64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blib"
version = "0.1.0"
description = "Bibtex generator from DOI"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
authors = [{name = "Joseph Barker", email = "j.barker@leeds.ac.uk"}]
dependencies = [
    "Unidecode >= 1.3.8",
    "diskcache >= 5.6.3",
    "pdfplumber >= 0.11",
    "pylatexenc >= 2.10",
    "regex >= 2024.5.15",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/drjbarker/blib"

[project.scripts]
blib = "blib.main:main"
